configuration/#configure-the-splash-screen-background-color

--- a/01-StickerSmash/app.json
+++ b/01-StickerSmash/app.json
@@ -1,4 +1,9 @@
 {
+  "splash": {
+    "image": "./assets/splash.png",
+    "resizeMode": "contain",
+    "backgroundColor": "#25292e" 
+  },
   "expo": {
     "name": "01-StickerSmash",
     "slug": "01-StickerSmash",
